--- a/src/components/app-filter/app-filter.css
+++ b/src/components/app-filter/app-filter.css
@@ -5,12 +5,19 @@
     justify-content: flex-start;
     gap:10px
 }
+@media(max-width:660px) {
+    .btn-group {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+}
 
 .btn {
     font-size: 16px;
-    border-radius: 10px;
+    border-radius: 75px;
     border: none;
-    padding: 7px;
+    padding: 7px 10px;
     color: #ffffff;
     cursor: pointer;
     transition: 0.3s all;
