--- a/src/components/app-info/app-info.css
+++ b/src/components/app-info/app-info.css
@@ -1,7 +1,8 @@
 .app-info {
     padding: 25px;
-    background-color: #404040;
     border-radius: 0px 0px 25px 25px;
     color: #ffffff;
-    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+    background: rgba(255,255,255,.05);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
