--- a/src/components/employees-add-form/employees-add-form.css
+++ b/src/components/employees-add-form/employees-add-form.css
@@ -1,10 +1,11 @@
 .app-add-form {
-    margin-top: 30px;
+    width: 100%;
     color: #ffffff;
-    border-radius: 25px 25px 0 0;
-    background-color: #404040;
-    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+    border-radius: 25px;
     padding: 20px;
+    background: rgba(255,255,255,.05);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 h3 {
     margin-top: 0;
@@ -16,6 +17,18 @@ h3 {
     justify-content: space-between;
     align-items: center;
     gap: 15px;
+}
+
+@media(max-width:660px) {
+    .add-form {
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+    }
+
+    .add-form button {
+        width: 100%;
+    }
 }
 
  .form-control {
