--- a/src/components/employees-list/employees-list.css
+++ b/src/components/employees-list/employees-list.css
@@ -2,7 +2,8 @@
     margin-top: 30px;
     color: #ffffff;
     border-radius: 25px;
-    background-color: #404040;
-    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+    background: rgba(255,255,255,.05);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     padding: 20px;
 }
