--- a/src/components/search-panel/search-panel.css
+++ b/src/components/search-panel/search-panel.css
@@ -3,8 +3,9 @@
     padding: 20px;
     border-radius: 25px;
     color: #ffffff;
-    background-color: #404040;
-    box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.15);
+    background: rgba(255,255,255,.05);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
 }
 
 .search-input {
